courses/430_programming-languages/assignment-6/tests/error/hw5_error01.correct
attempt to invoke 'int' value as a function
